[WebGL] Check for global variable precision mismatch between vertex and fragment shaders. https://bugs.webkit.org/show_bug.cgi?id=125546. <rdar://problem/15203364>

Reviewed by Brent Fulgham.

Covered Khronos conformances tests:
webgl/1.0.2/glsl/misc/shader-with-global-variable-precision-mismatch.html

* html/canvas/WebGLRenderingContext.cpp:
(WebCore::WebGLRenderingContext::linkProgram):
* platform/graphics/GraphicsContext3D.h: Rename areProgramSymbolsValid since it currently only serves one purpose.
* platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:
(WebCore::GraphicsContext3D::precisionsMatch):
* platform/mac/TestExpectations:
Unskip webgl/1.0.2/glsl/misc/shader-with-global-variable-precision-mismatch.html

Canonical link: https://commits.webkit.org/143736@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160567 268f45cc-cd09-0410-ab3c-d52691b4dbfc