Source/WebCore/platform/graphics/GraphicsContext3D.h
@@ -758,7 +758,7 @@ public:
 
     void useProgram(Platform3DObject);
     void validateProgram(Platform3DObject);
-    bool areProgramSymbolsValid(Platform3DObject vertexShader, Platform3DObject fragmentShader) const;
+    bool precisionsMatch(Platform3DObject vertexShader, Platform3DObject fragmentShader) const;
 
     void vertexAttrib1f(GC3Duint index, GC3Dfloat x);
     void vertexAttrib1fv(GC3Duint index, GC3Dfloat* values);
